fix for events clock icon distorting on mobile

--- a/src/app/events/events.component.less
+++ b/src/app/events/events.component.less
@@ -39,7 +39,7 @@
                     p.calendar-event-description{.inter(500);}
                 }
                 .calendar-event-time{display: flex; flex-direction: row; justify-content: flex-start; align-items: center;
-                    svg{width: 14px; height: 14px; border: 2px solid @dark-grey-blue; border-radius: 100%; opacity: .85; margin-right: 8px;
+                    svg{width: 14px; height: 14px; border: 2px solid @dark-grey-blue; border-radius: 100%; opacity: .85; margin-right: 8px; flex-shrink: 0; flex-grow: 1;
                         .primary{fill: transparent;}
                         .secondary{fill: @darkest-grey;}
                     }
